# SevenBot-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  console.py  core.py  create_index.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: lint.yml
locale/: en.yml  ja.yml
src/: console.py  core.py  embed.yml  formatter.py  lang.py
src/common/: confirm.py  embed.py
src/const/: color.py
src/db/: gc_room.py
src/exts/: _common.py  ex_events.py  global_chat.py  ping.py
